Fixed buttons not fitting in url bar

--- a/Private Mode Style/userChrome.css
+++ b/Private Mode Style/userChrome.css
@@ -238,7 +238,8 @@ LAYOUT
 
 /*** URLBAR + MEGABAR ***/
 :root #urlbar {
-    --urlbar-height: 25px !important;
+    --urlbar-min-height: 25px !important;
+    --urlbar-max-height: 25px !important;
 }
 #urlbar-input-container label {
     margin: 2px 0px !important;
@@ -293,12 +294,19 @@ LAYOUT
     padding: 1px 0px 1px 0px !important;
     min-height: 19px !important;
 }
-.urlbar-page-action, #urlbar-go-button, .search-go-button {
-    padding: 0px 5px !important;
+.urlbar-page-action {
+    padding: 0px 0px !important;
     min-height: 19px !important;
+}
+#urlbar-go-button {
+    padding: 2px !important;
+ }
+.search-go-button {
+    padding: 6px !important;
 }
 :root {
     --urlbar-icon-padding: 4px !important;
+    --urlbar-icon-border-radius: 2px !important;
 }
 #urlbar-zoom-button {
     padding: 0px 3px !important;
